--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -1,11 +1,10 @@
 <header>
-  <img src="{{ '/images/logo.svg' | relative_url }}" alt="Logo" />
+  <h1>Matt Buck: Founder & Full-stack Engineer</h1>
 </header>
 
 <nav>
   <ul>
     <li><a href="{{ '/' | relative_url }}">Home</a></li>
-    <li><a href="{{ '/about' | relative_url }}">About</a></li>
     <li><a href="{{ '/posts' | relative_url }}">Posts</a></li>
   </ul>
 </nav>
