--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -2,9 +2,9 @@
   <h1>Matt Buck: Founder & Full-stack Engineer</h1>
 </header>
 
-<nav>
+<!-- <nav>
   <ul>
     <li><a href="{{ '/' | relative_url }}">Home</a></li>
     <li><a href="{{ '/posts' | relative_url }}">Posts</a></li>
   </ul>
-</nav>
+</nav> -->
