--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -31,6 +31,13 @@ h1 {
   line-height: 1.2;
 }
 
+/* -------------
+   HIGHLIGHTS
+   =========== */
+#text-name {
+  white-space: nowrap;
+}
+
 body > header {
   margin: 1rem;
   text-align: center;
