Enable use of Tailwind

--- a/src/_layouts/post.liquid
+++ b/src/_layouts/post.liquid
@@ -4,4 +4,8 @@ layout: default
 
 <h1>{{ data.title }}</h1>
 
+<h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
+
 {{ content }}
