--- a/src/_layouts/post.liquid
+++ b/src/_layouts/post.liquid
@@ -2,10 +2,9 @@
 layout: default
 ---
 
-<h1>{{ data.title }}</h1>
 
 <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  {{ data.title }}
+</h1>
 
 {{ content }}
