--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -93,3 +93,11 @@ hr {
   border-top: 2px dotted #bbb;
   margin: 3rem 0;
 }
+
+/* -------------
+   BLOG POSTS
+   =========== */
+
+body.post main p {
+  padding-top: 24px;
+}
