--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -4,7 +4,7 @@
 
 <nav>
   <ul>
-    <li><a href="{{ '/' | relative_url }}">Home</a></li>
-    <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+    <li><a{% if resource.relative_url == "/" %} class="underline"{% endif %} href="{{ '/' | relative_url }}">Home</a></li>
+    <li><a{% if resource.relative_path contains "_posts" %} class="underline"{% endif %} href="{{ '/blog' | relative_url }}">Blog</a></li>
   </ul>
 </nav>
