--- a/src/_layouts/default.liquid
+++ b/src/_layouts/default.liquid
@@ -1,15 +1,21 @@
 <!doctype html>
 <html lang="{{ site.locale }}">
   <head>
-    {% render "head", metadata: site.metadata, title: data.title %}
+    {% render "head"
+      , metadata: site.metadata
+      , data: data %}
   </head>
   <body class="{{ data.layout }} {{ data.page_class }}">
-    {% render "navbar", metadata: site.metadata, resource: resource %}
+    {% render "navbar"
+      , metadata: site.metadata
+      , resource: resource
+      , data: data %}
 
     <main>
       {{ content }}
     </main>
 
-    {% render "footer", metadata: site.metadata %}
+    {% render "footer"
+      , metadata: site.metadata %}
   </body>
 </html>
