Fix post typograhpy styling

--- a/src/_layouts/post.liquid
+++ b/src/_layouts/post.liquid
@@ -2,9 +2,10 @@
 layout: default
 ---
 
+<article class="prose prose-stone dark:prose-invert lg:prose-xl mx-auto">
+  <h1 class="text-3xl font-bold underline">
+    {{ data.title }}
+  </h1>
 
-<h1 class="text-3xl font-bold underline">
-  {{ data.title }}
-</h1>
-
-{{ content }}
+  {{ content }}
+</article>
