--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -3,7 +3,7 @@
 </header>
 
 <nav>
-  <ul>
+  <ul class="navbar">
     <li><a{% if resource.relative_url == "/" %} class="underline"{% endif %} href="{{ '/' | relative_url }}">Home</a></li>
     <li><a{% if resource.relative_path contains "_posts" or resource.relative_path contains "blog" %} class="underline"{% endif %} href="{{ '/blog' | relative_url }}">Blog</a></li>
   </ul>
