--- a/src/_layouts/post.liquid
+++ b/src/_layouts/post.liquid
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="prose prose-stone dark:prose-invert lg:prose-xl mx-auto">
+<article class="prose prose-stone lg:prose-xl mx-auto">
   <h1 class="text-3xl font-bold underline">
     {{ data.title }}
   </h1>
