--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -72,6 +72,7 @@ main {
   margin: 2rem auto 4rem;
   max-width: 65rem;
   min-height: calc(100vh - 200px);
+  height: auto;
   padding: 25px 25px 50px;
   background: white;
   box-shadow: 2px 3px 3px #ddd;
